# raven

./: .gitignore  CMakeLists.txt  LICENSE  README.md  plan.md
assets/models/4k-tree-stump-megascan/source/: wdzkeckbw_LOD0.mtl
assets/models/dry-grass/source/: sketchfabGrass.mtl
assets/models/oak-trees/source/: oaktrees.mtl
assets/models/trees-low-poly/source/: trees.mtl
src/core/: main.cpp
src/game/: db_perlin.hpp  frustumCulling.cpp  game.cpp  game.h  generateChunk.cpp  player.cpp  sky.cpp  structures.cpp  vegetation.cpp  water.cpp  worldBoundaries.cpp
src/shaders/: fragment.glsl  skybox.fs  skybox.vs  vertex.glsl
